fixed overflow

--- a/style.sass
+++ b/style.sass
@@ -93,6 +93,7 @@ body
 		padding: 1.5em 3em
 		text-align: justify
 		background-color: $content-bg
+		overflow: hidden
 
 		*
 			color: inherit
